istio/axd-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: axd-ingressgateway
    chart: gateways-1.0.3
    heritage: Tiller
    istio: ingressgateway
    release: istio
  name: axd-ingressgateway
  namespace: istio-system
spec:
  externalTrafficPolicy: Local
  healthCheckNodePort: 31615
  ports:
  - name: http2
    nodePort: 31380
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: axd-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 39.108.42.203
