istio/axd-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  generation: 1
  name: axd-rms-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - blue.aixiangdao.tech
    - rms.aixiangdao.tech
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/blue/blue.crt
      serverCertificate: /etc/istio/ingressgateway-certs/blue/blue.key
  - hosts:
    - green.aixiangdao.tech
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/green/green.crt
      serverCertificate: /etc/istio/ingressgateway-certs/green/green.key
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  generation: 1
  name: axd-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - api.app.aixiangdao.tech
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/istio-system/api.app.crt
      serverCertificate: /etc/istio/ingressgateway-certs/istio-system/api.app.key
  - hosts:
    - api.rms.aixiangdao.tech
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/istio-system/api.rms.crt
      serverCertificate: /etc/istio/ingressgateway-certs/istio-system/api.rms.key
  - hosts:
    - rms.aixiangdao.tech
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/istio-system/rms.crt
      serverCertificate: /etc/istio/ingressgateway-certs/istio-system/rms.key
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: axd-rms-develop
spec:
  hosts:
  - "rms.aixiangdao.tech"
  gateways:
  - axd-gateway
  http:
  - match:
    - headers:
        branch:
          exact: develop
    route:
    - destination:
        host: axd-rms-0.axd-rms.develop.svc.cluster.local
  - route:
    - destination:
        host: server-1.axd-register.develop.svc.cluster.local
        port:
          number: 10001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: axd-rms
spec:
  hosts:
  - "blue.aixiangdao.tech"
  gateways:
  - rms-gateway
  http:
  - match:
    - headers:
        branch:
          exact: master
    route:
    - destination:
        host: axd-rms-0.axd-rms.blue.svc.cluster.local
  - route:
    - destination:
        #host: axd-rms-0.axd-rms.product.svc.cluster.local
        host: server-1.axd-register.product.svc.cluster.local
        port:
          number: 10001
